--- a/formula01/nbproject/project.properties
+++ b/formula01/nbproject/project.properties
@@ -31,13 +31,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.postgresql-42.2.5.jar=P:\\postgresql-42.2.5.jar
+file.reference.postgresql-42.2.5__3_.jar=src\\formula01\\bibliotecas\\postgresql-42.2.5 (3).jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.postgresql-42.2.5.jar}
+    ${file.reference.postgresql-42.2.5.jar}:\
+    ${file.reference.postgresql-42.2.5__3_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
